--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,6 @@ margin-right: 10px;
 }
 
 .button{
- 
   border: none;
   color: white;
   margin-right: 10px;
@@ -70,8 +69,9 @@ margin-right: 10px;
   justify-content: center;
   opacity: 0.5;
   transition: 0.3s;
-
-
+  cursor: pointer;
+  margin: auto 0;
+  font-size: 25px;
 }
 .button:hover{
 opacity: 1;
