--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   align-items: center;
   margin: 0 auto;
   font-size: 20px;
-  font-family: 'Oxygen', sans-serif;
+  font-family: cursive;
   padding: 10px;
    }
    
